# cu-perception-manipulation-stack

./: README.md  values_1.txt  values_2.txt
FingerSensorOther/: README.md  jointrecorderBax.txt  my.baxter.urdf  trial_moveit.cpp
FingerSensorOther/arduino/: README.md
FingerSensorOther/misc/: 14_sensorwhiteppr_PDMS.txt  14sensors_dbvalues_PDMS.mat  plotdata.m  plotdata_1.m  plotdata_2.m
build-finger_sensor-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  finger_sensor.cbp
build-finger_sensor-Desktop-Default/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-finger_sensor-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-finger_sensor-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-perception-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  perception.cbp  setup_custom_pythonpath.sh
build-perception-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  perception-msg-extras.cmake.installspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-perception-Desktop-Default/cmake/: perception-genmsg-context.py  perception-genmsg.cmake
build-perception-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-perception-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
camera_calibration_tool/: CMakeLists.txt  README.md  package.xml
camera_calibration_tool/launch/: calibration.launch
camera_calibration_tool/scripts/: transform_camera.py
camera_calibration_tool/src/: camera_alignment.cpp  camera_alignment_baxter.cpp
finger_sensor/: CMakeLists.txt  README.md  frames.gv  package.xml
finger_sensor/arduino/baxter/: baxter.ino
finger_sensor/arduino/jaco/force_proximity_fingers/: force_proximity_fingers.ino
finger_sensor/arduino/sensorstrip_1_ino/: sensorstrip_1_ino.ino
finger_sensor/config/: table_bundle.xml  tf_to_camera.yaml  tf_to_table.yaml
finger_sensor/launch/: baxter_control.launch  baxter_control.rviz  baxter_touch_sensor.launch  baxter_touch_sensor_local_host.launch  finger_sensor.rviz  jaco_fingers.launch  perception_only.launch  rviz.launch  stacking_blocks.launch  xtion.launch
finger_sensor/scripts/: #sensor.py#  Vx_trial.py  baxter_continuous_scan.py  baxter_cube_calibration.py  baxter_scan_object.py  controller.py  create_plots.py  demo_graspEventdetect.py  demo_graspsuccessExp.py  demo_vision_poseest_pickplace.py  getAccEff.py  graspsuccess_barplot.py  gripperApertureNode.py  gripperalignment.py  jaco_signals.py  joint_trajectory_file_playback.py  phongmodel.py  safety_stop.py  saveAccEff.py  save_signal.py  scanner.py  sensor.py  sensor_visual.py  sensors_states.py  shape_est.py  shape_est_1.py  shape_est_2.py  shape_est_3.py  signals.py  stacking_blocks.py  torque_controller.py
finger_sensor/scripts/getAccEff_gen_files_usedinISER /: FAI.txt  FAII.txt  SAI_Fgl.txt  SAI_Fgr.txt  acc_x.txt  acc_y.txt  acc_z.txt  centeringerr.txt  gripperAperture.txt  values.txt
finger_sensor/scripts/trialGraspEventDetection_dataFiles/: FAI.txt  FAII.txt  SAI_Fgl.txt  SAI_Fgr.txt  acc_x.txt  acc_y.txt  acc_z.txt  centeringerr.txt  gripperAperture.txt  values.txt
finger_sensor/src/: baxter_control.cpp  main_experiment.cpp  perception_server.cpp
finger_sensor/urdf/: baxter.urdf  baxter.urdf.xacro  baxter_no_end_effectors.urdf  electric_gripper.urdf.xacro
finger_sensor_msgs/: CMakeLists.txt  package.xml
finger_sensor_msgs/msg/: FingerDetect.msg  FingerTouch.msg
perception/: CMakeLists.txt  README.md  package.xml
perception/cfg/: perception_param.cfg  sensor_param.cfg
perception/launch/: interface.launch  interface.rviz
perception/msg/: identified_object.msg
perception/object_database/: block.pcd  bowl.pcd  cup.pcd  cup_with_spoon.pcd  plate.pcd  spoon.pcd
perception/scripts/: perceive_shapes.py  perception.py
perception/src/: correspondence_grouping.cpp  finger_sensor_perception.cpp  object_recognition.cpp  perception.cpp  perception_params.h
pick_and_place/: 2017-08-27-10-53-29.bag  CMakeLists.txt  README.md  package.xml  sai.txt  sensorvalues.txt  setup.py
pick_and_place/launch/: hardware.launch  pap_full.launch  (+4 more)
(+316 files in other folders)
