<?xml version="1.0"?>
<package>
  <name>finger_sensor_msgs</name>
  <version>0.0.1</version>
  <description >
  This contains the messages, actions and services for interfacing with the finger sensors.
  </description>

  <author email="branden.romero@colorado.edu">Branden Romero (CU Boulder)</author>
  <author>Matt DeDonato (WPI)</author>
  <maintainer email="branden.romero@colorado.edu">Branden Romero</maintainer>
  <license>BSD</license>

  <url>http://roboticmaterials.com/rm/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
